# hickory-dns

./: .gitignore  Cargo.toml  flake.nix  justfile
.github/workflows/: test.yml
.zed/: settings.json
conformance/test-server/: Cargo.toml
conformance/test-server/src/: main.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: lib.rs  tests.rs
crates/client/src/client/: client.rs  dnssec_client.rs  memoize_client_handle.rs  rc_stream.rs
crates/net/: Cargo.toml
crates/net/src/: dnssec.rs  error.rs  lib.rs  runtime.rs
crates/net/src/h2/: h2_client_stream.rs  h2_server.rs
crates/net/src/h3/: h3_client_stream.rs  h3_server.rs
crates/net/src/http/: error.rs  request.rs  response.rs
crates/net/src/multicast/: mdns_client_stream.rs  mdns_stream.rs
crates/net/src/quic/: quic_client_stream.rs  quic_server.rs  quic_stream.rs  tests.rs
crates/net/src/tcp/: tcp_client_stream.rs  tcp_stream.rs  tests.rs
crates/net/src/udp/: mod.rs  tests.rs  udp_client_stream.rs  udp_stream.rs
crates/net/src/xfer/: dns_exchange.rs  dns_handle.rs  dns_multiplexer.rs  mod.rs  retry_dns_handle.rs
crates/proto/: Cargo.toml
crates/proto/src/: error.rs  lib.rs  runtime.rs
crates/proto/src/dnssec/: mod.rs  nsec3.rs  signer.rs  verify.rs
crates/proto/src/h2/: h2_client_stream.rs
crates/proto/src/h3/: h3_client_stream.rs  h3_server.rs
crates/proto/src/multicast/: mdns_client_stream.rs  mdns_stream.rs  mod.rs
crates/proto/src/op/: dns_request.rs
crates/proto/src/quic/: mod.rs  quic_client_stream.rs  quic_runtime.rs  quic_server.rs  tests.rs
crates/proto/src/runtime/: iocompat.rs  quinn_adapter.rs  tokio_runtime.rs
crates/proto/src/rustls/: mod.rs  tls_client_stream.rs  tls_stream.rs
crates/proto/src/serialize/txt/: errors.rs
crates/proto/src/tcp/: tcp_client_stream.rs  tcp_stream.rs
crates/proto/src/udp/: mod.rs  udp_client_stream.rs  udp_stream.rs
crates/proto/src/xfer/: dns_exchange.rs  dns_multiplexer.rs  retry_dns_handle.rs
crates/recursor/: Cargo.toml
crates/recursor/src/: error.rs  lib.rs  metrics_tests.rs  recursor.rs  recursor_dns_handle.rs  tests.rs
crates/resolver/: Cargo.toml
crates/resolver/examples/: custom_provider.rs  flush_cache.rs  global_resolver.rs  multithreaded_runtime.rs
crates/resolver/src/: cache.rs  caching_client.rs  config.rs  connection_provider.rs  lib.rs  lookup_ip.rs  name_server.rs  name_server_pool.rs  resolver.rs  tests.rs  tls.rs
crates/resolver/src/name_server/: connection_provider.rs  name_server.rs
crates/resolver/src/system_conf/: android.rs  apple.rs  windows.rs
crates/resolver/tests/: tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs
crates/server/src/server/: h2_handler.rs  h3_handler.rs  metrics.rs  mod.rs  quic_handler.rs  request_handler.rs  response_handler.rs
crates/server/src/store/: forwarder.rs  recursor.rs
crates/server/src/store/in_memory/: inner.rs  mod.rs
crates/server/src/store/sqlite/: mod.rs  persistence.rs
crates/server/src/zone_handler/: catalog.rs  message_request.rs  message_response.rs  mod.rs
tests/compatibility-tests/: Cargo.toml
tests/compatibility-tests/tests/integration/: sig0_tests.rs  tsig_tests.rs  zone_transfer.rs
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs  mock_client.rs  mock_request_handler.rs
tests/integration-tests/tests/integration/: catalog_tests.rs  chained_zone_handler_tests.rs  client_future_tests.rs  client_tests.rs  dnssec_client_handle_tests.rs  invalid_nsec3_tests.rs  invalid_nsec_tests.rs  lookup_tests.rs  name_server_pool_tests.rs  retry_dns_handle_tests.rs  rfc4592_tests.rs  server_future_tests.rs  sqlite_zone_handler_tests.rs  truncation_tests.rs  validating_forwarder_tests.rs
tests/test-support/: Cargo.toml
tests/test-support/src/: lib.rs
util/: Cargo.toml
