[package]
name = "hickory-proto"

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
Hickory DNS is a safe and secure DNS library. This is the foundational DNS protocol library for all Hickory DNS projects.
"""

# These URLs point to more information about the repository
documentation = "https://docs.rs/hickory-proto"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
    "data-encoding/std",
    "ipnet/std",
    "rand/std",
    "rand/thread_rng",
    "ring?/std",
    "thiserror/std",
    "tracing/std",
    "url/std",
]

tls-aws-lc-rs = ["__tls"]
https-aws-lc-rs = ["tls-aws-lc-rs", "__https"]
quic-aws-lc-rs = ["tls-aws-lc-rs", "__quic"]
h3-aws-lc-rs = ["quic-aws-lc-rs", "__h3"]

tls-ring = ["__tls"]
https-ring = ["tls-ring", "__https"]
quic-ring = ["tls-ring", "__quic"]
h3-ring = ["quic-ring", "__h3"]

__tls = ["std"]
__https = ["std"]
__quic = ["std"]
__h3 = ["std"]

dnssec-aws-lc-rs = ["dep:aws-lc-rs", "aws-lc-rs/aws-lc-sys", "aws-lc-rs/ring-io", "__dnssec"]
dnssec-ring = ["dep:ring", "__dnssec"]
__dnssec = ["dep:bitflags", "dep:rustls-pki-types", "dep:time", "std"]
testing = ["std"]

text-parsing = ["std"]

serde = ["dep:serde", "std", "url/serde"]

# enables experimental the mDNS (multicast) feature
mdns = ["std"]

# enables a custom random function backed by a no_std compatible mutex
no-std-rand = ["once_cell/critical-section", "dep:critical-section"]

backtrace = ["dep:backtrace", "std"]

access-control  = ["std", "dep:prefix-trie"]

[lib]
name = "hickory_proto"
path = "src/lib.rs"

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
backtrace = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }
cfg-if.workspace = true
critical-section = { workspace = true, optional = true }
data-encoding = { workspace = true, features = ["alloc"] }
enum-as-inner.workspace = true
idna.workspace = true
ipnet.workspace = true
once_cell = { workspace = true }
prefix-trie = {  workspace = true, optional = true }
rand = { workspace = true, features = ["std_rng"] }
ring = { workspace = true, optional = true, features = ["std"] }
rustls-pki-types = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror.workspace = true
time = { workspace = true, optional = true }
tinyvec = { workspace = true, features = ["alloc"] }
tracing = { workspace = true, default-features = false }
url = { workspace = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
