[package]
name = "hickory-runtime"

description = """
TODO
"""

documentation = "https://docs.rs/hickory-runtime"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["tokio"]

tls-aws-lc-rs = []
https-aws-lc-rs = []
quic-aws-lc-rs = []
h3-aws-lc-rs = []

tls-ring = []
https-ring = []
quic-ring = []
h3-ring = []

dnssec-aws-lc-rs = []
dnssec-ring = []

tokio = ["dep:tokio", "dep:tracing", "tokio/rt", "tokio/net", "tokio/time", "tokio/rt-multi-thread", "quinn?/runtime-tokio"]

__tls = ["dep:tokio"]
__https = []
__quic = ["dep:quinn"]
__h3 = []
__dnssec = []

[dependencies]
async-trait.workspace = true
futures-io = { workspace = true, default-features = false, features = ["std"] }
quinn = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
tracing = { workspace = true, default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
max_combination_size = 2
denylist = ["__tls", "__https", "__quic", "__h3", "__dnssec"]
